# Juego-POO

./: Arma.cpp  Arma.h  CMakeLists.txt  Personajes.cpp  Personajes.h  Tipos.h  main.cpp  ventana.cpp  ventana.h
